<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sen">Sen</string>
    <string name="exp">^</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>
    <string name="raiz">Raiz</string>
    <string name="del">Del</string>
    <string name="ac">AC</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="cero">0</string>
    <string name="punto">.</string>
    <string name="igual">=</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    

</resources>
