<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.calculadora.MainActivity" >

    <TextView
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#D5D5D5"
        android:text="" />
    
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:stretchColumns="0,1,2,3">
        
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sen" />

            <Button
                android:id="@+id/btnCos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cos" />
            
	        <Button
	            android:id="@+id/btnTan"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tan" />
	        <Button
	            android:id="@+id/btnV"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="" />
        </TableRow>
          <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp" />

            <Button
                android:id="@+id/btnRaiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raiz" />
            
	        <Button
	            android:id="@+id/btnDel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/del" />
	        <Button
	            android:id="@+id/btnAc"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ac" />
        </TableRow>
          <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siete" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocho" />
            
	        <Button
	            android:id="@+id/btn9"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/nueve" />
	        <Button
	            android:id="@+id/btnDiv"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/div" />
        </TableRow>
          <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuatro" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinco" />
            
	        <Button
	            android:id="@+id/btn6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/seis" />
	        <Button
	            android:id="@+id/btnMulti"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/multi" />
        </TableRow>
          <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uno" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dos" />
            
	        <Button
	            android:id="@+id/btn3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tres" />
	        <Button
	            android:id="@+id/btnResta"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/resta" />
        </TableRow>
          <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnPunt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punto" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cero" />
            
	        <Button
	            android:id="@+id/btnIgual"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/igual" />
	        <Button
	            android:id="@+id/btnSuma"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/suma" />
        </TableRow>
        
    </TableLayout>

    
</LinearLayout>